crates/vite_task_plan/tests/plan_snapshots/fixtures/parallel-and-concurrency/snapshots/task graph.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/parallel-and-concurrency
---
[
  {
    "key": [
      "<workspace>/",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "test-workspace",
        "task_name": "build",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "vt run -r build",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "build-with-concurrency"
    ],
    "node": {
      "task_display": {
        "package_name": "test-workspace",
        "task_name": "build-with-concurrency",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "vt run -r --concurrency 5 build",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/a",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/a",
        "task_name": "build",
        "package_path": "<workspace>/packages/a"
      },
      "resolved_config": {
        "command": "echo building a",
        "resolved_options": {
          "cwd": "<workspace>/packages/a",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/b",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/b",
        "task_name": "build",
        "package_path": "<workspace>/packages/b"
      },
      "resolved_config": {
        "command": "echo building b",
        "resolved_options": {
          "cwd": "<workspace>/packages/b",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/packages/c",
      "build"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/c",
        "task_name": "build",
        "package_path": "<workspace>/packages/c"
      },
      "resolved_config": {
        "command": "echo building c",
        "resolved_options": {
          "cwd": "<workspace>/packages/c",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            }
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  }
]
